# agentveil-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSING.md  README.md  README_PYPI.md  ROADMAP.md  glama.json  pyproject.toml
.github/workflows/: publish.yml  tests.yml
agentveil/: __init__.py  _did.py  agent.py  data_integrity.py  delegation.py  egress.py  proof.py  runtime_install_clone.py
agentveil/tools/: claude_mcp.py
agentveil_mcp/: README.md  __init__.py  server.py
agentveil_mcp_proxy/: README.md  __init__.py  circuit_breaker.py  classification.py  cli.py  passthrough.py  policy.py  runtime_gate.py  tool_schema_validation.py
agentveil_mcp_proxy/approval/: manager.py
agentveil_mcp_proxy/evidence/: __init__.py  (+2 more)
agentveil_paperclip/: __init__.py  cli.py  doctor.py  init_plan.py
docs/: ADVANCED_AGENT_NETWORK.md  API.md  APPROVAL_ROUTING.md  CI_POLICY.md  CUSTOMER_INTEGRATION.md  DATA_HANDLING.md  DELEGATION_RECEIPT.md  ERRORS.md  INTEGRATIONS.md  MCP_PROXY_APPROVAL_UX.md  MCP_PROXY_DESIGN_PRINCIPLES.md  MCP_PROXY_OPERATIONS.md  MCP_PROXY_QUICKSTART.md  MCP_PROXY_RELEASE_ACCEPTANCE.md  MCP_PROXY_V0_1_PLAN.md  MODE_A_QUICKSTART.md  PAPERCLIP_INTEGRATION.md  PILOT_READINESS_CHECKLIST.md  PROOF_PACKET.md  PROTOCOL.md  PYTHON_SDK_ADVANCED.md  REGISTRATION.md  SECURITY_CONTEXT.md  SECURITY_MODEL.md
examples/: approval_flow.py  claude_mcp_example.py  handle_errors.py  proof_packet_export.py
scripts/: mcp_proxy_release_acceptance.py  verify_wheel.sh
tests/: test_decision_receipt_v3.py  test_delegation_dualpath.py  test_delegation_issuance.py  test_egress_sdk_wrapper.py  test_identity.py  test_mcp_hosted.py  test_mcp_packaging.py  test_mcp_proxy_approval.py  test_mcp_proxy_circuit_breaker.py  test_mcp_proxy_classification.py  test_mcp_proxy_cli.py  test_mcp_proxy_evidence.py  test_mcp_proxy_passthrough.py  test_mcp_proxy_passthrough_concurrent.py  test_mcp_proxy_policy.py  test_mcp_proxy_proof.py  test_mcp_proxy_runtime_gate.py  test_mcp_proxy_tool_surface.py  test_paperclip_doctor.py  test_proof_verification.py  test_publish_workflow_policy.py  test_runtime_install_clone_context.py  test_strict_bundle_verifier.py
(+13 files in other folders)
